# spotify-distributed-platform

./: .gitignore  README.md  debug_columns.py  docker-compose.yml  main.py  pyproject.toml
src/: dashboard.py
src/models/: schema.py
src/pipelines/: aggregate_gold.py  clean_silver.py  ingest_raw.py
src/utils/: db.py
tests/: test_pipeline.py
